--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>Turn on slack notifications so you don't miss important informations.</li>
     </ol>
     <hr> 
-    <p>Do you want to go back to the <a href="homepage.html">Homepage?</a></p>
+    <p>Do you want to go back to the <a href="home.html">Homepage?</a></p>
     <p>No? Then you can go on and sign up or log in.</p>
     <button>Get Started</button>
     <button>Sign In Now</button>
