--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-     <div>
+    <div class="container">
         <img src="./images/tjp (1).png" alt="logo">  
     <h1>About Us -The Just Projects</h1>
     <p>We learn by doing</p>
@@ -24,8 +24,8 @@
     <hr> 
     <p>Do you want to go back to the <a href="home.html">Homepage?</a></p>
     <p>No? Then you can go on and sign up or log in.</p>
-    <button>Get Started</button>
-    <button>Sign In Now</button>
+        <a href="table.html"><button>Table Task</button> </a>
+    <button>Sign In Now..</button>
 </div>
 </body>
 </html>
