--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <hr> 
     <p>Do you want to go back to the <a href="home.html">Homepage?</a></p>
     <p>No? Then you can go on and sign up or log in.</p>
-        <a href="table.html"><button>Table Task</button> </a>
-    <button>Sign In Now..</button>
+      
+        <a href="./table.html"><button type="submit">Table Task </button></a>
+        <a href="./Form.html"><button type="submit">Form Page</button>
+  
 </div>
 </body>
 </html>
