--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>No? Then you can go on and sign up or log in.</p>
       
         <a href="./table.html"><button type="submit">Table Task </button></a>
-        <a href="./Form.html"><button type="submit">Form Page</button>
+        <a href="./form.html"><button type="submit">Form Page</button>
   
 </div>
 </body>
