--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <p>Do you want to go back to the <a href="home.html">Homepage?</a></p>
     <p>No? Then you can go on and sign up or log in.</p>
       
-        <a href="./table.html"><button type="submit">Table Task </button></a>
-        <a href="./form.html"><button type="submit">Form Page</button>
+        <a href="./table.html"><button type="submit">Table Task </button> </a>
+        <a href="./form.html"><button type="submit">Form Page</button> </a>
   
 </div>
 </body>
